objects/MPW_Train_Account__c.object
<CustomObject>
    <description>For MPW Train Account Assignment</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account__r.Owner.FirstName &amp; &apos; &apos; &amp; Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>TEXT(Account__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Short_Name__c</fullName>
        <formula>Account__r.Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sub_Type__c</fullName>
        <formula>TEXT(Account__r.Sub_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Territory__c</fullName>
        <formula>TEXT(Account__r.Financial_Territory__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT(Account__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account assigned to MPW train</description>
        <inlineHelpText>Account assigned to MPW train</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Available MPW Trains</relationshipLabel>
        <relationshipName>MPW_Train_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>The date on demand MPW train available for customer reservation</description>
        <inlineHelpText>The date on demand MPW train available for customer reservation</inlineHelpText>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expired_Date__c</fullName>
        <description>The date where assigned account must submit the reservation</description>
        <inlineHelpText>The date where assigned account must submit the reservation</inlineHelpText>
        <label>Expired Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MPW_Reservation_Close_Date__c</fullName>
        <formula>MPW_Train__r.Reservation_Close_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPW Reservation Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MPW_Reservation_Open_Date__c</fullName>
        <formula>MPW_Train__r.Reservation_Open_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPW Reservation Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MPW_Train_Custom_Link__c</fullName>
        <formula>HYPERLINK(&quot;/apex/MPWTrainScheduleTranxVF?tranx=View&amp;id=&quot; &amp; MPW_Train__c &amp; &quot;&amp;from=tab&amp;tabId=&quot; &amp; $Label.MPW_Maintain_Schedule_Tab_Id, MPW_Train__r.Name, &quot;_blank&quot;)</formula>
        <label>MPW Train</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_Train_Type__c</fullName>
        <formula>TEXT(MPW_Train__r.Train_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPW Train Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_Train__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account assigned to MPW train</description>
        <inlineHelpText>Account assigned to MPW train</inlineHelpText>
        <label>MPW Train</label>
        <referenceTo>MPW_Train_Maintenance__c</referenceTo>
        <relationshipLabel>Assigned Accounts</relationshipLabel>
        <relationshipName>MPW_Train_Accounts_Assignment</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>MPW Train - Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MPWACC{00000}</displayFormat>
        <label>MPWACC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MPW Train - Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>